--- a/shifts_manager/apimanager/templates/apimanager/index.html
+++ b/shifts_manager/apimanager/templates/apimanager/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Schedule Planner</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -48,7 +48,8 @@
       <ul class="nav nav-pills nav-stacked">
         <li><a href="/">Shifts</a></li>
         <li><a href="/workers">Workers</a></li>
-        <li><a href="/api/shifts">API</a></li>
+        <li><a href="/api/shifts">API - shift</a></li>
+        <li><a href="/api/workers">API - workers</a></li>
       </ul><br>
     </div>
 
